Update to standalone and current boilder state

--- a/projects/demo/src/index.html
+++ b/projects/demo/src/index.html
@@ -11,6 +11,6 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body class="app-background mat-typography">
-  <demo-app></demo-app>
+  <ngx-demo-app></ngx-demo-app>
 </body>
 </html>
